# django_graph_db

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  dump_and_restore.sh  manage.py  nginx.default  pyproject.toml  start-server.sh
.github/workflows/: starter.yaml
archiv/: admin.py  models.py  utils.py  views.py
archiv/management/commands/: import_jad_full_texts.py  import_jad_passages.py  import_jad_sentences.py  import_vulgata.py  update_jad_sentences.py
archiv/migrations/: 0001_enable_pgvector.py  0002_initial.py  0003_textsnippet_textsnippetindex.py  0004_alter_textsnippet_options.py  0005_textsnippet_embedding_nomic_and_more.py
django_graph_db/: asgi.py  settings.py  urls.py  wsgi.py
jad/: apps.py  urls.py  views.py
templates/: base.html
templates/partials/: footer.html  navbar.html
webpage/: urls.py  views.py
webpage/static/webpage/css/: style.css
webpage/templates/webpage/: about.html  data_model.html  imprint.html  index.html  user_logout.html
