[project]
name = "django-graph-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.6",
    "django-extensions>=4.1",
    "langchain-openai>=0.3.32",
    "pandas>=2.3.2",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.7",
    "ruff>=0.12.12",
]
